# ussplitter-server

./: Dockerfile  README.md  pyproject.toml
src/ussplitter_server/: backend.py  server.py
